added location unit tests